--- a/index.html
+++ b/index.html
@@ -3,9 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokemon-Page</title>
+    <link rel="stylesheet" href="css/base.css">
+    <script src="/js/main.js" type="module"></script>
 </head>
 <body>
-    
+    <header>
+        <div class="headerSection">
+            <div id="logo">
+                <a href="index.html">
+                    <img src="images/logo.png" alt="pokemon-logo">
+                </a>
+            </div>
+            <div class="ball">
+                <a href="">
+                    <img src="images/pokeBall.png" alt="pokeball-team">
+                </a>
+            </div>
+        </div>
+    </header>
+
+    <div id="hero">
+        <img src="images/banner.jfif" alt="">
+    </div>
+
+    <main>
+        <section id="generations">
+            <ul>
+                <li>
+                    <h2>First Generation</h2>
+                    <a href="pokemon-types/types.html?generation=1/">
+                        <img src="images/firstGen.webp" alt="mew-mewtwo">
+                    </a>
+                </li>
+                <li>
+                    <h2>Second Generation</h2>
+                    <a href="pokemon-types/types.html?generation=2/">                    
+                        <img src="images/umbreon-espeon.jpg" alt="umbreon-espeon">
+                    </a>
+                </li>
+                <li>
+                    <h2>Third Generation</h2>
+                    <a href="pokemon-types/types.html?generation=3/">
+                        <img src="images/rayquaza.jfif" alt="rayquaza">
+                    </a>
+                </li>
+                <li>
+                    <h2>Fourth Generation</h2>
+                    <a href="pokemon-types/types.html?generation=4/">
+                        <img src="images/luxray.png" alt="luxray">
+                    </a>
+                </li>
+                <li>
+                    <h2>Fifth Generation</h2>
+                    <a href="pokemon-types/types.html?generation=5/">
+                        <img src="images/darmatian.png" alt="darmatian">
+                    </a>
+                  
+                </li>
+                <li>
+                    <h2>Sixth Generation</h2>
+                    <a href="pokemon-types/types.html?generation=6/">
+                        <img src="images/greninja.jfif" alt="greninja">
+                    </a>                 
+                </li>
+                <li>
+                    <h2>Seventh Generation</h2>
+                    <a href="pokemon-types/types.html?generation=7/">
+                        <img src="images/zacian.webp" alt="zacian">
+                    </a>   
+                </li>
+                <li>
+                    <h2>Eighth Generation</h2>
+                    <a href="pokemon-types/types.html?generation=8/">
+                        <img src="images/ceruledge.jpg" alt="ceruledge">
+                    </a>                    
+                </li>
+            </ul>
+        </section>
+        <section id="ranPoke">
+            <h2></h2>
+            <img src="" alt="">
+            <p></p>
+        </section>
+    </main>
+    <footer>ONLY for fun</footer>
 </body>
 </html>
