--- a/pokemon-types/types.html
+++ b/pokemon-types/types.html
@@ -11,13 +11,13 @@
     <header>
         <div class="headerSection">
             <div id="logo">
-                <a href="/index.html">
-                    <img src="/images/logo.png" alt="pokemon-logo">
+                <a href="../index.html">
+                    <img src="../images/logo.png" alt="pokemon-logo">
                 </a>
             </div>
             <div class="ball">
                 <a href="">
-                    <img src="/images/pokeBall.png" alt="pokeball-team">
+                    <img src="../images/pokeBall.png" alt="pokeball-team">
                 </a>
             </div>
         </div>
