--- a/pokemon-types/types.html
+++ b/pokemon-types/types.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon-Types</title>
     <link rel="stylesheet" href="../css/base.css">
-    <script src="/js/types.js" type="module"></script>
+    <script src="../js/types.js" type="module"></script>
 </head>
 <body>
     <header>
