--- a/pokemons/pokemons.html
+++ b/pokemons/pokemons.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/base.css">
+    <script src="../js/pokemons.js" type="module"></script>
 </head>
 <body>
     <header>
@@ -23,78 +24,7 @@
     </header>
     <main>
         <div id="pokemons">
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
-            <section class="pokemon">
-                <a href="">
-                    <h2>Pokemon</h2>
-                    <img src="/images/placeholder.png" alt="testing">
-                </a>
-            </section>
+            
         </div>
     </main>
     <footer>
