pokemon card added

--- a/index.html
+++ b/index.html
@@ -32,50 +32,50 @@
             <ul>
                 <li>
                     <h2>First Generation</h2>
-                    <a href="pokemon-types/types.html?generation=1/">
+                    <a href="pokemon_types/types.html?generation=1/">
                         <img src="images/firstGen.webp" alt="mew-mewtwo">
                     </a>
                 </li>
                 <li>
                     <h2>Second Generation</h2>
-                    <a href="pokemon-types/types.html?generation=2/">                    
+                    <a href="pokemon_types/types.html?generation=2/">                    
                         <img src="images/umbreon-espeon.jpg" alt="umbreon-espeon">
                     </a>
                 </li>
                 <li>
                     <h2>Third Generation</h2>
-                    <a href="pokemon-types/types.html?generation=3/">
+                    <a href="pokemon_types/types.html?generation=3/">
                         <img src="images/rayquaza.jfif" alt="rayquaza">
                     </a>
                 </li>
                 <li>
                     <h2>Fourth Generation</h2>
-                    <a href="pokemon-types/types.html?generation=4/">
+                    <a href="pokemon_types/types.html?generation=4/">
                         <img src="images/luxray.png" alt="luxray">
                     </a>
                 </li>
                 <li>
                     <h2>Fifth Generation</h2>
-                    <a href="pokemon-types/types.html?generation=5/">
+                    <a href="pokemon_types/types.html?generation=5/">
                         <img src="images/darmatian.png" alt="darmatian">
                     </a>
                   
                 </li>
                 <li>
                     <h2>Sixth Generation</h2>
-                    <a href="pokemon-types/types.html?generation=6/">
+                    <a href="pokemon_types/types.html?generation=6/">
                         <img src="images/greninja.jfif" alt="greninja">
                     </a>                 
                 </li>
                 <li>
                     <h2>Seventh Generation</h2>
-                    <a href="pokemon-types/types.html?generation=7/">
+                    <a href="pokemon_types/types.html?generation=7/">
                         <img src="images/zacian.webp" alt="zacian">
                     </a>   
                 </li>
                 <li>
                     <h2>Eighth Generation</h2>
-                    <a href="pokemon-types/types.html?generation=8/">
+                    <a href="pokemon_types/types.html?generation=8/">
                         <img src="images/ceruledge.jpg" alt="ceruledge">
                     </a>                    
                 </li>
