--- a/pokemon_stats/pokemon.html
+++ b/pokemon_stats/pokemon.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemons</title>
+    <title>Document</title>
     <link rel="stylesheet" href="../css/base.css">
-    <script src="../js/pokemons.js" type="module"></script>
+    <script src="../js/stats.js" type="module"></script>
 </head>
 <body>
     <header>
@@ -22,11 +22,12 @@
             </div>
         </div>
     </header>
+
     <main>
-        <div id="pokemons">
-            
-        </div>
+        <div class="card">
+        </div>  
     </main>
+
     <footer>
         <footer>ONLY for fun</footer>
     </footer>
