--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             <p></p>
         </section>
     </main>
-    <footer>ONLY for fun</footer>
+    <footer>
+        <img src="images/pikachu.png" alt="">
+        <p>Jesus Contreras || WDD330-Project || ONLY for fun</p>
+    </footer>
 </body>
 </html>
