--- a/pokemon_stats/pokemon.html
+++ b/pokemon_stats/pokemon.html
@@ -28,8 +28,9 @@
         </div>  
     </main>
 
-    <footer>
-        <footer>ONLY for fun</footer>
+    <footer>        
+        <img src="../images/pikachu.png" alt="">
+        <p>Jesus Contreras || WDD330-Project || ONLY for fun</p></footer>
     </footer>
 </body>
 </html>
