--- a/pokemon_types/types.html
+++ b/pokemon_types/types.html
@@ -28,7 +28,10 @@
         </div>
     </main>
 
-    <footer>ONLY for fun</footer>
+    <footer>        
+        <img src="../images/pikachu.png" alt="">
+        <p>Jesus Contreras || WDD330-Project || ONLY for fun</p></footer>
+    </footer>
 </body>
 
 </html>
