--- a/pokemons/pokemons.html
+++ b/pokemons/pokemons.html
@@ -27,8 +27,9 @@
             
         </div>
     </main>
-    <footer>
-        <footer>ONLY for fun</footer>
+        <footer>        
+            <img src="../images/pikachu.png" alt="">
+            <p>Jesus Contreras || WDD330-Project || ONLY for fun</p></footer>
     </footer>
 </body>
 </html>
