--- a/pokemon_bag/bag.html
+++ b/pokemon_bag/bag.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bag</title>
     <link rel="stylesheet" href="../css/base.css">
-    <script src="../js/stats.js" type="module"></script>
+    <script src="../js/bag.js" type="module"></script>
 </head>
 <body>
     <header>
@@ -24,10 +24,10 @@
     </header>
 
     <main>
-        <div class="card">
-        </div>  
+        <div class="pokemon-bag"></div>
+        <a class="checkout" href="../poke_checkout/checkout.html">Checkout</a>
     </main>
-
+    
     <footer>        
         <img src="../images/pikachu.png" alt="">
         <p>Jesus Contreras || WDD330-Project || ONLY for fun</p></footer>
