--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </a>
             </div>
             <div class="ball">
-                <a href="">
+                <a href="pokemon_bag/bag.html">
                     <img src="images/pokeBall.png" alt="pokeball-team">
                 </a>
             </div>
