--- a/poke_checkout/success.html
+++ b/poke_checkout/success.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemon-Stats</title>
+    <title>Success</title>
     <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/small.css">
-    <script src="../js/stats.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
@@ -26,12 +24,12 @@
             </div>
         </div>
     </header>
-
     <main>
-        <div class="card">
-        </div>  
+        <div id="thanksMess">
+            <h1>Thank you for using our page! The pokemons' team has been send to your email!</h1>
+            <p>We have to upgrade and add some features, we will continue to work on it to give the User the best experience he can get and have fun</p>
+        </div>
     </main>
-
     <footer>        
         <img src="../images/pikachu.png" alt="">
         <p>Jesus Contreras || WDD330-Project || ONLY for fun</p></footer>
