--- a/pokemon_bag/bag.html
+++ b/pokemon_bag/bag.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bag</title>
     <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/small.css">
     <script src="../js/bag.js" type="module"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -25,7 +29,7 @@
 
     <main>
         <div class="pokemon-bag"></div>
-        <a class="checkout" href="../poke_checkout/checkout.html">Checkout</a>
+        <button class="checkout">checkout</button>
     </main>
     
     <footer>        
