--- a/pokemon_types/types.html
+++ b/pokemon_types/types.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon-Types</title>
     <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/small.css">
     <script src="../js/types.js" type="module"></script>
+
 </head>
 <body>
     <header>
